# AMQCSLdb-scripts

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
scripts/: async.py  nijimovie2.py  remove_metadata.py  title.py  upload.py  upload2.py
scripts/character/: hasu.py  idoly_pride.py  idoly_pride_metadata.py  niji.py  sunshine_metadata.py  wds.py
scripts/misc/: genshin_fix.py  horse_fix.py  instless.py  milk.py  silksong.py  silksong_audio.py  superstar_fix.py
storage/: nijimovie2.txt
